# duckdb-paimon

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  release-bundle.yml
data/testdb.db/testtbl/bucket-0/: data-428fb611-e1e7-4edb-b7bf-8194c20df01e-0.parquet  data-e09f61dc-9858-41df-bcb7-8019316aa740-0.parquet
data/testdb.db/testtbl/manifest/: manifest-ab2e290e-ab26-47d5-9c75-0aa5d0e6bc2b-0  manifest-cff403fb-3fcf-4981-8c77-03d3c46efc1e-0  manifest-f7a769ad-77e7-4045-a30a-fbccd0102132-0  manifest-list-ab2e290e-ab26-47d5-9c75-0aa5d0e6bc2b-1  manifest-list-cff403fb-3fcf-4981-8c77-03d3c46efc1e-1  manifest-list-f7a769ad-77e7-4045-a30a-fbccd0102132-0  manifest-list-f7a769ad-77e7-4045-a30a-fbccd0102132-1
data/testdb.db/testtbl/schema/: schema-0
data/testdb.db/testtbl/snapshot/: snapshot-1  snapshot-2  snapshot-3
patches/: paimon-cpp-cmake-policy-version-minimum.patch  paimon-cpp-install-arrow-headers.patch  paimon-cpp-macos-ndebug-for-checked-cast.patch
src/: paimon_extension.cpp  paimon_functions.cpp
src/include/: paimon_catalog.hpp  paimon_extension.hpp  paimon_functions.hpp  paimon_schema_entry.hpp  paimon_schema_set.hpp  paimon_table_entry.hpp  paimon_table_set.hpp  paimon_transaction_manager.hpp  paimon_type_utils.hpp
src/paimon_storage/: paimon_catalog.cpp  paimon_scan.cpp  paimon_schema_entry.cpp  paimon_schema_set.cpp  paimon_table_entry.cpp  paimon_table_set.cpp  paimon_transaction_manager.cpp  paimon_type_utils.cpp
test/sql/: paimon_ddl.test  paimon_scan.test
